Return task ID in `send_later`
