# tabellen/api.py
@@ -55,9 +55,9 @@ def send_later(body):
     client = Client(bot=bot_id, chat=chat_id)
     event_type = "newMessage"
     event = Event(_type=event_type, client=client, data={"message": message})
-    event.send(url, delay * SECONDS_IN_MINUTE)
+    task_id = event.send(url, delay * SECONDS_IN_MINUTE)
 
-    return NoContent, HTTPStatus.OK
+    return {"messageId": task_id}, HTTPStatus.OK
 
 
 def subscribe(body):
