# tabellen/specs/swagger.yml
@@ -98,8 +98,16 @@ paths:
                 - message
                 - delay
       responses:
-        202:
+        200:
           description: Сообщение запланировано
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  messageId:
+                    type: string
+                    description: Идентификатор сообщения
         424:
           description: Не найден вебхук для отправки сообщения
         500:
@@ -130,7 +138,7 @@ paths:
                   application/json:
                     schema:
                       allOf:
-                        - $ref: 'https://api.tomoru.ru/openapi#/components/schemas/TomoruEvent'
+                        - $ref: "https://api.tomoru.ru/openapi#/components/schemas/TomoruEvent"
                         - type: object
                           properties:
                             data:
